fix(ci): qa夜间回归测试5处修复 — yaml@2依赖同步+pages.json路径兼容+3个maestro脚本java17兼容(R324-R328)